// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Movement test suite SIMULACRA should generate a simple movement 1`] = `
Object {
  "events": Array [
    Object {
      "key": "C",
      "position": "II",
      "root": "D",
      "scaleName": "DORIAN",
      "turn": Object {
        "interval": "⟷",
        "type": "▼",
      },
      "type": "modulateMode",
    },
    Object {
      "key": "C",
      "position": "VI",
      "root": "A",
      "scaleName": "AEOLIAN",
      "turn": Object {
        "interval": 5,
        "type": "↑",
      },
      "type": "modulateMode",
    },
    Object {
      "key": "C",
      "position": "III",
      "root": "E",
      "scaleName": "PHRYGIAN",
      "turn": Object {
        "interval": "⟷",
        "type": "⟷",
      },
      "type": "modulateMode",
    },
    Object {
      "interval": "5P",
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "PHRYGIAN",
      "turn": Object {
        "interval": "5P",
        "type": "⤥",
      },
      "type": "modulate",
    },
    Object {
      "key": "C",
      "position": "VII",
      "root": "B",
      "scaleName": "LOCRIAN",
      "turn": Object {
        "interval": "⟷",
        "type": "▼",
      },
      "type": "modulateMode",
    },
    Object {
      "key": "C",
      "position": "III",
      "root": "E",
      "scaleName": "PHRYGIAN",
      "turn": Object {
        "interval": 5,
        "type": "↓",
      },
      "type": "modulateMode",
    },
    Object {
      "interval": "4P",
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "PHRYGIAN",
      "turn": Object {
        "interval": "4P",
        "type": "⤤",
      },
      "type": "modulate",
    },
    Object {
      "key": "A",
      "position": "IV",
      "root": "D",
      "scaleName": "AEOLIAN",
      "turn": Object {
        "interval": 5,
        "type": "↓",
      },
      "type": "modulateMode",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 960,
      "key": Object {
        "root": "D",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "quarter": 1,
      "time": 0,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "quarter": 3,
      "time": 960,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "E",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "quarter": 5,
      "time": 1920,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "A",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "quarter": 7,
      "time": 2880,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "B",
        "scale": "1P 2m 3m 4P 5d 6m 7m",
      },
      "quarter": 9,
      "time": 3840,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "E",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "quarter": 11,
      "time": 4800,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "A",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "quarter": 13,
      "time": 5760,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "D",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "quarter": 15,
      "time": 6720,
    },
  ],
}
`;

exports[`A Movement test suite SIMULACRA should generate a simple movement non buggy 1`] = `
Object {
  "events": Array [
    Object {
      "key": "C",
      "position": "V",
      "root": "G",
      "scaleName": "IONIAN",
      "turn": Object {
        "interval": 5,
        "type": "▼",
      },
      "type": "modulateMode",
    },
    Object {
      "key": "C",
      "position": "I",
      "root": "C",
      "scaleName": "LYDIAN",
      "turn": Object {
        "interval": 4,
        "type": "↑",
      },
      "type": "modulateMode",
    },
    Object {
      "interval": "6M",
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "LYDIAN",
      "turn": Object {
        "interval": "6M",
        "type": "⤤",
      },
      "type": "modulate",
    },
    Object {
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "LYDIAN",
      "turn": Object {
        "interval": 2,
        "type": "➜",
      },
      "type": "modulateMode",
    },
    Object {
      "key": "A",
      "position": "IV",
      "root": "D#",
      "scaleName": "LOCRIAN",
      "turn": Object {
        "interval": 4,
        "type": "↑",
      },
      "type": "modulateMode",
    },
    Object {
      "key": "A",
      "position": "VII",
      "root": "G#",
      "scaleName": "PHRYGIAN",
      "turn": Object {
        "interval": 5,
        "type": "↓",
      },
      "type": "modulateMode",
    },
    Object {
      "interval": "2M",
      "key": "A#",
      "position": "I",
      "root": "A#",
      "scaleName": "PHRYGIAN",
      "turn": Object {
        "interval": "2M",
        "type": "⤤",
      },
      "type": "modulate",
    },
    Object {
      "key": "A#",
      "position": "I",
      "root": "A#",
      "scaleName": "PHRYGIAN",
      "turn": Object {
        "interval": 2,
        "type": "⟷",
      },
      "type": "modulateMode",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 960,
      "key": Object {
        "root": "G",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "quarter": 1,
      "time": 0,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "C",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "quarter": 3,
      "time": 960,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "quarter": 5,
      "time": 1920,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "quarter": 7,
      "time": 2880,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "D#",
        "scale": "1P 2m 3m 4P 5d 6m 7m",
      },
      "quarter": 9,
      "time": 3840,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "G#",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "quarter": 11,
      "time": 4800,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "A#",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "quarter": 13,
      "time": 5760,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "A#",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "quarter": 15,
      "time": 6720,
    },
  ],
}
`;

exports[`A Movement test suite SIMULACRA should generate a turn rhythm movement 1`] = `
Object {
  "events": Array [
    Object {
      "key": "A",
      "position": "IV",
      "root": "D",
      "scaleName": "DORIAN",
      "turn": Object {
        "interval": "⟷",
        "type": "▼",
      },
      "type": "modulateMode",
    },
    Object {
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "AEOLIAN",
      "turn": Object {
        "interval": 5,
        "type": "↑",
      },
      "type": "modulateMode",
    },
    Object {
      "key": "A",
      "position": "IV",
      "root": "D",
      "scaleName": "DORIAN",
      "turn": Object {
        "interval": "⟷",
        "type": "⟷",
      },
      "type": "modulateMode",
    },
    Object {
      "interval": "5P",
      "key": "G",
      "position": "I",
      "root": "G",
      "scaleName": "DORIAN",
      "turn": Object {
        "interval": "5P",
        "type": "⤥",
      },
      "type": "modulate",
    },
    Object {
      "key": "G",
      "position": "IV",
      "root": "C",
      "scaleName": "MIXOLYDIAN",
      "turn": Object {
        "interval": 4,
        "type": "↑",
      },
      "type": "modulateMode",
    },
    Object {
      "key": "G",
      "position": "VII",
      "root": "F",
      "scaleName": "IONIAN",
      "turn": Object {
        "interval": 5,
        "type": "↓",
      },
      "type": "modulateMode",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 1280,
      "isRest": false,
      "key": Object {
        "root": "D",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "next": 1280,
      "time": 0,
    },
    Object {
      "dur": 1440,
      "isRest": false,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "next": 2720,
      "time": 1280,
    },
    Object {
      "dur": 1440,
      "isRest": false,
      "key": Object {
        "root": "D",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "next": 4160,
      "time": 2720,
    },
    Object {
      "dur": 1280,
      "isRest": false,
      "key": Object {
        "root": "G",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "next": 5440,
      "time": 4160,
    },
    Object {
      "dur": 1280,
      "isRest": false,
      "key": Object {
        "root": "C",
        "scale": "1P 2M 3M 4P 5P 6M 7m",
      },
      "next": 6720,
      "time": 5440,
    },
    Object {
      "dur": 960,
      "isRest": false,
      "key": Object {
        "root": "F",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "next": 7680,
      "time": 6720,
    },
  ],
}
`;
